Usability improvement: Stop nextmatch cells from overflowing

--- a/api/templates/default/etemplate2.css
+++ b/api/templates/default/etemplate2.css
@@ -2274,6 +2274,7 @@ ul[id$='favorites_popup_state'] span.filter_value {
 
     .et2_nextmatch table.egwGridView_outer thead tr th div.innerContainer {
         max-height: inherit;
+		overflow: clip;
     }
 
     #cke_1_top.cke_top {
